--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,16 @@
             <version>3.0.4</version>
             <scope>test</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.auth0</groupId>-->
+<!--            <artifactId>java-jwt</artifactId>-->
+<!--            <version>3.4.0</version>-->
+<!--        </dependency>-->
+        <!--引入jwt的依赖-->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
-            <version>3.4.0</version>
+            <version>4.4.0</version>
         </dependency>
     </dependencies>
 
