--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/my_blog
+    url: jdbc:mysql://localhost:3306/mydb
     username: root
     password: root
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
