--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,13 @@ spring:
     url: jdbc:mysql://localhost:3306/mydb
     username: root
     password: root
+  mail:
+    protocol: stmps
+    host: smtp.163.com
+    username: heanything@163.com
+    password: WCNzAQjnFuY4abhP
+    port: 465
+    default-encoding: UTF-8
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
